// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SignIn > should disable inputs and buttons on loading 1`] = `
"<div data-v-9441a41d=\\"\\" class=\\"sign-in flex flex-col justify-center items-center sm:p-4 sm:max-w-sm m-auto\\">
  <h1 data-v-9441a41d=\\"\\" class=\\"text-xl mb-8\\">Arithmetic App</h1>
  <div data-v-9441a41d=\\"\\" class=\\"rounded-lg p-8 bg-white w-full text-center\\">
    <h1 data-v-9441a41d=\\"\\" class=\\"text-xl mb-8 text-gray-600\\">Sign in</h1>
    <form data-v-9441a41d=\\"\\">
      <div data-v-9441a41d=\\"\\" placeholder=\\"Email\\" autocomplete=\\"email\\" required=\\"\\" class=\\"mb-4\\">
        <!---->
        <div class=\\"flex relative\\">
          <!----><input placeholder=\\"Email\\" autocomplete=\\"email\\" required=\\"\\" class=\\"mb-4 bg-gray-100 border border-gray-300 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 p-2.5 cursor-not-allowed\\" disabled=\\"\\" type=\\"email\\">
          <!---->
        </div>
        <!---->
      </div>
      <div data-v-9441a41d=\\"\\" placeholder=\\"Password\\" autocomplete=\\"current-password\\" required=\\"\\" class=\\"mb-2\\">
        <!---->
        <div class=\\"flex relative\\">
          <!----><input placeholder=\\"Password\\" autocomplete=\\"current-password\\" required=\\"\\" class=\\"mb-2 bg-gray-100 border border-gray-300 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 p-2.5 cursor-not-allowed\\" disabled=\\"\\" type=\\"password\\">
          <!---->
        </div>
        <!---->
      </div>
      <h3 data-v-9441a41d=\\"\\" class=\\"my-4 p-0 text-sm text-red-600\\"></h3><button data-v-9441a41d=\\"\\" class=\\"text-gray-900 bg-white border-gray-300 focus:outline-none focus:ring-4 font-medium rounded-lg dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:focus:ring-gray-700 cursor-not-allowed opacity-50 px-4 py-2 text-gray-900 bg-white border border-gray-300 focus:outline-none focus:ring-4 focus:ring-gray-200 font-medium rounded-lg dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:focus:ring-gray-700 cursor-not-allowed opacity-50 text-sm px-4 py-2\\" disabled=\\"\\" type=\\"submit\\">
        <!----><span class=\\"\\"><!---->Please wait ...<!----></span>
        <!---->
      </button>
    </form>
  </div>
</div>"
`;

exports[`SignIn > should display error properly 1`] = `
"<div data-v-9441a41d=\\"\\" class=\\"sign-in flex flex-col justify-center items-center sm:p-4 sm:max-w-sm m-auto\\">
  <h1 data-v-9441a41d=\\"\\" class=\\"text-xl mb-8\\">Arithmetic App</h1>
  <div data-v-9441a41d=\\"\\" class=\\"rounded-lg p-8 bg-white w-full text-center\\">
    <h1 data-v-9441a41d=\\"\\" class=\\"text-xl mb-8 text-gray-600\\">Sign in</h1>
    <form data-v-9441a41d=\\"\\">
      <div data-v-9441a41d=\\"\\" placeholder=\\"Email\\" autocomplete=\\"email\\" required=\\"\\" class=\\"mb-4\\">
        <!---->
        <div class=\\"flex relative\\">
          <!----><input placeholder=\\"Email\\" autocomplete=\\"email\\" required=\\"\\" class=\\"mb-4 bg-gray-50 border-gray-300 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 p-2.5\\" type=\\"email\\">
          <!---->
        </div>
        <!---->
      </div>
      <div data-v-9441a41d=\\"\\" placeholder=\\"Password\\" autocomplete=\\"current-password\\" required=\\"\\" class=\\"mb-2\\">
        <!---->
        <div class=\\"flex relative\\">
          <!----><input placeholder=\\"Password\\" autocomplete=\\"current-password\\" required=\\"\\" class=\\"mb-2 bg-gray-50 border-gray-300 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 p-2.5\\" type=\\"password\\">
          <!---->
        </div>
        <!---->
      </div>
      <h3 data-v-9441a41d=\\"\\" class=\\"my-4 p-0 text-sm text-red-600\\">Test error</h3><button data-v-9441a41d=\\"\\" class=\\"text-gray-900 bg-white border-gray-300 focus:outline-none focus:ring-4 font-medium rounded-lg dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:focus:ring-gray-700 hover:bg-gray-100 dark:hover:border-gray-600 px-4 py-2 text-gray-900 bg-white border border-gray-300 focus:outline-none focus:ring-4 focus:ring-gray-200 font-medium rounded-lg dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:focus:ring-gray-700 hover:bg-gray-100 dark:hover:border-gray-600 text-sm px-4 py-2\\" type=\\"submit\\">
        <!----><span class=\\"\\"><!---->Submit<!----></span>
        <!---->
      </button>
    </form>
  </div>
</div>"
`;

exports[`SignIn > should render properly 1`] = `
"<div data-v-9441a41d=\\"\\" class=\\"sign-in flex flex-col justify-center items-center sm:p-4 sm:max-w-sm m-auto\\">
  <h1 data-v-9441a41d=\\"\\" class=\\"text-xl mb-8\\">Arithmetic App</h1>
  <div data-v-9441a41d=\\"\\" class=\\"rounded-lg p-8 bg-white w-full text-center\\">
    <h1 data-v-9441a41d=\\"\\" class=\\"text-xl mb-8 text-gray-600\\">Sign in</h1>
    <form data-v-9441a41d=\\"\\">
      <div data-v-9441a41d=\\"\\" placeholder=\\"Email\\" autocomplete=\\"email\\" required=\\"\\" class=\\"mb-4\\">
        <!---->
        <div class=\\"flex relative\\">
          <!----><input placeholder=\\"Email\\" autocomplete=\\"email\\" required=\\"\\" class=\\"mb-4 bg-gray-50 border-gray-300 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 p-2.5\\" type=\\"email\\">
          <!---->
        </div>
        <!---->
      </div>
      <div data-v-9441a41d=\\"\\" placeholder=\\"Password\\" autocomplete=\\"current-password\\" required=\\"\\" class=\\"mb-2\\">
        <!---->
        <div class=\\"flex relative\\">
          <!----><input placeholder=\\"Password\\" autocomplete=\\"current-password\\" required=\\"\\" class=\\"mb-2 bg-gray-50 border-gray-300 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 p-2.5\\" type=\\"password\\">
          <!---->
        </div>
        <!---->
      </div>
      <h3 data-v-9441a41d=\\"\\" class=\\"my-4 p-0 text-sm text-red-600\\"></h3><button data-v-9441a41d=\\"\\" class=\\"text-gray-900 bg-white border-gray-300 focus:outline-none focus:ring-4 font-medium rounded-lg dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:focus:ring-gray-700 hover:bg-gray-100 dark:hover:border-gray-600 px-4 py-2 text-gray-900 bg-white border border-gray-300 focus:outline-none focus:ring-4 focus:ring-gray-200 font-medium rounded-lg dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:focus:ring-gray-700 hover:bg-gray-100 dark:hover:border-gray-600 text-sm px-4 py-2\\" type=\\"submit\\">
        <!----><span class=\\"\\"><!---->Submit<!----></span>
        <!---->
      </button>
    </form>
  </div>
</div>"
`;
